<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Weather</string>
    <string name="breezy_weather" translatable="false">Breezy Weather</string>
    <string name="forecast">Forecast</string>
    <string name="daily_forecast">Daily forecast</string>
    <string name="hourly_forecast">Hourly forecast</string>
    <string name="current_weather">Current weather</string>
    <string name="precipitation_nowcasting">Precipitation nowcasting</string>
    <string name="air_quality">Air quality</string>
    <string name="air_quality_short">Air quality</string>
    <string name="pollen">Pollen</string>
    <string name="ephemeris">Sun &amp; moon</string>
    <string name="ephemeris_sun">Sun</string>
    <string name="ephemeris_moon">Moon</string>
    <string name="ephemeris_about">About rise and set times</string>
    <string name="ephemeris_about_rise">The rise time is when the sun or moon fully appears above the horizon.</string>
    <string name="ephemeris_about_set">The set time is when the sun or moon completely disappears below the horizon.</string>
    <string name="ephemeris_about_dawn">The dawn is when the first visible light of the day appears before sunrise.</string>
    <string name="ephemeris_about_dusk">The dusk is the darkest stage of twilight before the last visible light disappears.</string>
    <string name="ephemeris_polar_day">Polar day</string>
    <string name="ephemeris_polar_night">Polar night</string>
    <string name="clock">Clock</string>
    <string name="alert">Alert</string>
    <string name="alerts">Alerts</string>
    <string name="alerts_to_follow">Upcoming alerts, tap here to see them.</string>
    <string name="alert_source">Source: %s</string>
    <string name="daily_yesterday">Yesterday</string>
    <string name="daily_today">Today</string>
    <string name="daily_tomorrow">Tomorrow</string>
    <string name="daily_yesterday_short">Yda</string>
    <string name="daily_today_short">Today</string>
    <string name="daily_tomorrow_short">Tmw</string>
    <string name="daily_summary">Daily summary</string>
    <string name="chart_no_daily_data">No data available for this day.</string>
    <string name="chart_no_hourly_data">No hourly data available.</string>
    <string name="chart_not_enough_hourly_data">Not enough hourly data available to display a chart for this day.</string>
    <string name="chart_average">Average</string>
    <string name="chart_maximum_value">Maximum value</string>
    <string name="conditions">Conditions</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_real">Actual</string>
    <string name="temperature_real_details">The actual temperature.</string>
    <string name="temperature_feels_like">Feels like</string>
    <string name="temperature_feels_like_with_unit">Feels like %s</string>
    <string name="temperature_feels_like_details">What the temperature feels like, as a result of humidity, wind and/or sunlight.</string>
    <string name="temperature_apparent">Apparent</string>
    <string name="temperature_wind_chill">Wind chill</string>
    <string name="temperature_degree_day">Degree day</string>
    <string name="temperature_degree_day_heating">Heating degree day</string>
    <string name="temperature_degree_day_heating_explanation">Difference between the outside temperature and a reference comfortable temperature used to estimate heating energy requirements</string>
    <string name="temperature_degree_day_cooling">Cooling degree day</string>
    <string name="temperature_degree_day_cooling_explanation">Difference between the outside temperature and a reference comfortable temperature used to estimate cooling energy requirements</string>
    <string name="temperature_average_short">Avg</string>
    <string name="temperature_normal_short">Normal</string>
    <string name="temperature_normals">Temperature normals</string>
    <string name="temperature_normals_deviation">Deviation</string>
    <string name="temperature_normals_deviation_explanation_maximum">Deviation from %s average maximum temperature for this location</string>
    <string name="temperature_normals_deviation_explanation_minimum">Deviation from %s average minimum temperature for this location</string>
    <string name="precipitation">Precipitation</string>
    <string name="precipitation_total_day">Daytime precipitation</string>
    <string name="precipitation_total_night">Nighttime precipitation</string>
    <string name="precipitation_probability">Precipitation probability</string>
    <string name="precipitation_duration">Precipitation duration</string>
    <string name="precipitation_thunderstorm">Thunderstorm</string>
    <string name="precipitation_rain">Rain</string>
    <string name="precipitation_rain_total_day">Daytime rain</string>
    <string name="precipitation_rain_total_night">Nighttime rain</string>
    <string name="precipitation_snow">Snow</string>
    <string name="precipitation_snow_total_day">Daytime snow</string>
    <string name="precipitation_snow_total_night">Nighttime snow</string>
    <string name="precipitation_ice">Ice</string>
    <string name="precipitation_intensity_light">Light</string>
    <string name="precipitation_intensity_medium">Medium</string>
    <string name="precipitation_intensity_heavy">Heavy</string>
    <string name="precipitation_none">No precipitation</string>
    <string name="precipitation_between_time">Precipitation from %1$s to %2$s</string>
    <string name="wind">Wind</string>
    <string name="wind_speed_about">About wind speed and gusts</string>
    <string name="wind_speed_about_description">Wind speed is measured by averaging wind speeds over a period of time. Gusts are sudden bursts of wind typically lasting under 20 seconds.</string>
    <string name="wind_gusts_short">Gusts</string>
    <string name="wind_origin">From %s</string>
    <string name="wind_direction_variable">Variable</string>
    <string name="wind_direction_N">North</string>
    <string name="wind_direction_NE">North East</string>
    <string name="wind_direction_E">East</string>
    <string name="wind_direction_SE">South East</string>
    <string name="wind_direction_S">South</string>
    <string name="wind_direction_SW">South West</string>
    <string name="wind_direction_W">West</string>
    <string name="wind_direction_NW">North West</string>
    <string name="wind_direction_N_short">N</string>
    <string name="wind_direction_NE_short">NE</string>
    <string name="wind_direction_E_short">E</string>
    <string name="wind_direction_SE_short">SE</string>
    <string name="wind_direction_S_short">S</string>
    <string name="wind_direction_SW_short">SW</string>
    <string name="wind_direction_W_short">W</string>
    <string name="wind_direction_NW_short">NW</string>
    <string name="wind_strength_scale_description" translatable="false">@string/label_description</string>
    <string name="wind_strength_scale">Beaufort scale</string>
    <string name="wind_strength_0">Calm</string>
    <string name="wind_strength_1">Light air</string>
    <string name="wind_strength_2">Light breeze</string>
    <string name="wind_strength_3">Gentle breeze</string>
    <string name="wind_strength_4">Moderate breeze</string>
    <string name="wind_strength_5">Fresh breeze</string>
    <string name="wind_strength_6">Strong breeze</string>
    <string name="wind_strength_7">Moderate gale</string>
    <string name="wind_strength_8">Gale</string>
    <string name="wind_strength_9">Strong gale</string>
    <string name="wind_strength_10">Storm</string>
    <string name="wind_strength_11">Violent storm</string>
    <string name="wind_strength_12">Hurricane-force</string>
    <string name="uv_index">UV index</string>
    <string name="uv_index_short">UV index</string>
    <string name="uv_index_0_2">Low</string>
    <string name="uv_index_3_5">Moderate</string>
    <string name="uv_index_6_7">High</string>
    <string name="uv_index_8_10">Very high</string>
    <string name="uv_index_11">Extreme</string>
    <string name="uv_index_maximum_value" translatable="false">@string/chart_maximum_value</string>
    <string name="uv_index_about">About UV index</string>
    <string name="uv_index_about_description">The UV index measures the strength of the sun’s ultraviolet radiation. The higher it is, the greater and faster it can cause sunburn, skin cancer and eye damage.</string>
    <string name="uv_index_scale">UV index scale</string>
    <string name="uv_index_description" translatable="false">@string/label_description</string>
    <string name="uv_index_time_to_burn">Time to burn</string>
    <string name="uv_index_time_to_burn_explanations">The exact time to burn depends on the altitude, the presence of reflective ground like water or snow, your skin type, and the use of sunscreen.</string>
    <string name="uv_alert_level">Alert</string>
    <string name="air_quality_index">Air quality index</string>
    <string name="air_quality_index_short">AQI</string>
    <string name="air_quality_index_about">About air quality index</string>
    <string name="air_quality_index_about_description_1">Air quality index (AQI) is a scale designed to help you understand how polluted the air is in a particular area, and the potential risks to your health.</string>
    <string name="air_quality_index_about_description_2">The scale used in this app is based on World Health Organization recommendations, rather than local regulations, to have meaningful categories, and make it easier to compare pollution levels between countries.</string>
    <string name="air_quality_index_scale">Air quality index scale</string>
    <string name="air_quality_index_description" translatable="false">@string/label_description</string>
    <string name="air_quality_index_harmless_exposure">Harmless exposure</string>
    <string name="air_quality_level_1">Excellent</string>
    <string name="air_quality_level_1_description">The air quality is ideal for most individuals; enjoy your normal outdoor activities.</string>
    <string name="air_quality_level_1_harmless_exposure">&gt; 1 year</string>
    <string name="air_quality_level_2">Fair</string>
    <string name="air_quality_level_2_description">The air quality is generally acceptable for most individuals. However, sensitive groups may experience minor to moderate symptoms from long-term exposure.</string>
    <string name="air_quality_level_2_harmless_exposure">&lt; 1 year</string>
    <string name="air_quality_level_3">Poor</string>
    <string name="air_quality_level_3_description">The air has reached a high level of pollution and is unhealthy for sensitive groups. Reduce time spent outside if you are feeling symptoms such as difficulty breathing or throat irritation.</string>
    <string name="air_quality_level_3_harmless_exposure">&lt; 1 day</string>
    <string name="air_quality_level_4">Unhealthy</string>
    <string name="air_quality_level_4_description">Health effects can be immediately felt by sensitive groups. Healthy individuals may experience difficulty breathing and throat irritation with prolonged exposure. Limit outdoor activity.</string>
    <string name="air_quality_level_4_harmless_exposure">&lt; 1 hour</string>
    <string name="air_quality_level_5">Very unhealthy</string>
    <string name="action_location_list">Location list</string>
    <string name="action_edit_location">Edit this location</string>
    <string name="action_open_in_other_app">Open in another app</string>
    <string name="action_open_in_other_app_description">Open this location in another app</string>
    <string name="action_settings">Settings</string>
</resources>